# human-name

./: .gitignore  .travis.yml  Cargo.toml  README.md  build.rs  equal.txt  human_name.rb  index.html  search-index.js
.github/workflows/: rust.yml
benches/: human_name.rs
fuzz/: Cargo.toml  seed_corpus.rb
fuzz/fuzz_targets/: consistent_with.rs  parse.rs
human_name/: index.html  macro.eq_or_ends_with!.html  macro.eq_or_ends_with.html  macro.eq_or_starts_with!.html  macro.eq_or_starts_with.html  sidebar-items.js  struct.Name.html
implementors/phf_shared/: trait.PhfHash.js
itertools/: enum.Diff.html  enum.EitherOrBoth.html  enum.FoldWhile.html  enum.MinMaxResult.html  enum.Partition.html  fn.assert_equal.html  fn.diff_with.html  fn.equal.html  fn.linspace.html  fn.partition.html  index.html  macro.iproduct.html  macro.izip.html  sidebar-items.js  struct.Batching.html  struct.Chunk.html  struct.Chunks.html  struct.ChunksLazy.html  struct.Coalesce.html  struct.Combinations.html  struct.CombinationsN.html  struct.Dedup.html  struct.Flatten.html  struct.Format.html  struct.FormatDefault.html  struct.Group.html  struct.GroupBy.html  struct.GroupByLazy.html  struct.Groups.html  struct.ISlice.html  struct.Interleave.html  struct.InterleaveShortest.html  struct.Intersperse.html  struct.KMerge.html  struct.Linspace.html  struct.MendSlices.html  struct.Merge.html  struct.MergeBy.html  struct.MultiPeek.html  struct.PadUsing.html  (+21 more)
itertools/free/: fn.all.html  (+17 more)
libc/: enum.timezone.html  fn.__error.html  fn.aio_cancel.html  fn.aio_error.html  fn.aio_fsync.html  fn.aio_read.html  fn.aio_return.html  fn.aio_suspend.html  fn.aio_write.html  fn.backtrace.html  fn.bind.html  fn.duplocale.html  fn.endutxent.html  fn.forkpty.html  fn.freelocale.html  fn.fseeko.html  fn.fstatfs.html  fn.getnameinfo.html  fn.getpeereid.html  fn.getpriority.html  fn.getpwnam_r.html  fn.getpwuid_r.html  fn.getutxent.html  fn.getutxid.html  fn.getutxline.html  fn.glob.html  fn.initgroups.html  fn.kevent.html  fn.kevent64.html  fn.lio_listio.html  fn.localeconv_l.html  fn.localtime_r.html  fn.lutimes.html  fn.mach_absolute_time.html  fn.mach_timebase_info.html  fn.madvise.html  fn.mincore.html  fn.mknod.html  fn.mount.html  fn.mprotect.html  (+89 more)
phf/: index.html  struct.Map.html  struct.OrderedMap.html  struct.OrderedSet.html  struct.Set.html  trait.PhfHash.html
phf_generator/: fn.generate_hash.html  index.html  struct.HashState.html
phf_macros/: index.html  macro.phf_map.html  macro.phf_ordered_map.html  macro.phf_ordered_set.html  macro.phf_set.html
phf_shared/: fn.displace.html  fn.get_index.html  fn.hash.html  fn.split.html  index.html  trait.PhfHash.html
ruby/: Rakefile  humanname.gemspec
siphasher/: index.html
src/: case.rs  comparison.rs  decomposition.rs  eq_hash.rs  external.rs  features.rs  initials.rs  lib.rs  main.rs  namecase.rs  namelike.rs  namepart.rs  nickname.rs  parse.rs  segment.rs  serialization.rs  suffix.rs  surname.rs  title.rs  transliterate.rs  utils.rs  web_match.rs  word.rs
tests/: benchmark-names.txt  equal-names.txt  lib.rs  parseable-names.txt  unparseable-names.txt  web-matches.txt  web-nonmatches.txt
unicode_segmentation/: constant.UNICODE_VERSION.html  index.html  struct.GraphemeIndices.html  struct.Graphemes.html  struct.UWordBoundIndices.html  struct.UWordBounds.html  trait.UnicodeSegmentation.html
unidecode/: fn.unidecode.html  fn.unidecode_char.html  index.html
(+210 files in other folders)
