[package]
name = "human_name"
version = "1.3.0"
authors = ["David Judd <cargo@davidjudd.net>"]
description = "A library for parsing and comparing human names"
keywords = ["human", "name", "language", "nlp"]
categories = ["parsing", "text-processing", "command-line-utilities",]
license = "Apache-2.0"
repository = "https://github.com/djudd/human-name"
documentation = "https://docs.rs/human_name/"
rust-version = "1.52"
edition = "2018"

[dependencies]
unicode-segmentation = "1.9"
unicode-normalization = "0.1"
unicode-case-mapping = "0.3"
unidecode = "0.3"
phf = { features = ["macros"], version = "0.10" }
libc = "0.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
smallvec = { features = ["union"], version = "1.9" }
smallstr = "0.3"

[dev-dependencies]
alloc_counter = "0.0"

[features]
default = ["name_eq_hash", "serialization"]
name_eq_hash = []
serialization = []
bench = []

[profile.release]
debug = true
lto = "thin"

[[bin]]
name = "human_name"
doc = false

[lib]
name = "human_name"
crate-type = ["rlib", "dylib"]
