[package]
name = "human_name"
version = "2.0.2"
authors = ["David Judd <cargo@davidjudd.net>"]
description = "A library for parsing and comparing human names"
keywords = ["human", "name", "language", "nlp"]
categories = ["parsing", "text-processing", "command-line-utilities",]
license = "Apache-2.0"
repository = "https://github.com/djudd/human-name"
documentation = "https://docs.rs/human_name/"
rust-version = "1.52"
edition = "2018"

[dependencies]
crossbeam-utils = "0.8"
unicode-segmentation = "1.9"
unicode-normalization = "0.1"
unicode-case-mapping = "0.4"
unidecode = "0.3"
libc = { version = "0.2", optional = true }
phf = "0.11"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
smallvec = { features = ["union"], version = "1.9" }
smallstr = "0.3"

[dev-dependencies]
alloc_counter = "0.0"

[build-dependencies]
phf_codegen = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
name_eq_hash = []
serialization = ["serde", "serde_json"]
bench = []
ffi = ["libc"]

[profile.release]
lto = "thin"

[profile.bench]
debug = true

[[bin]]
name = "human_name"
doc = false
required-features = ["serialization"]

[lib]
name = "human_name"
crate-type = ["rlib", "cdylib"]
